# woaiwojia1002

./: 20110301154502.doc  Japanese.doc
cabocha-0.1/: Makefile.am  Makefile.in  aclocal.m4  cabocha-config.in  cabocha.spec  cabocha.spec.in  cabocharc.in  config.h.in  configure  configure.in  mkinstalldirs
cabocha-0.1/doc/: Makefile.am  Makefile.in  cabocha.html  cabocharc.txt  example.c  index.html  partial.txt
cabocha-0.1/libexec/: IPA-conv.pl.in  JUMAN-conv.pl.in  Makefile.am  Makefile.in
cabocha-0.1/man/: Makefile.in  cabocha.1
cabocha-0.1/model/: Makefile.am  Makefile.in
cabocha-0.1/perl/: CaboCha.pm  CaboCha.xs  Changes  MANIFEST  Makefile.PL  Makefile.PL.in  README  test.pl  typemap
cabocha-0.1/ruby/: CaboCha.cc  README  extconf.rb  extconf.rb.in  test.rb
cabocha-0.1/src/: DynamicLibrary.h  Makefile.am  Makefile.in  cabocha.cc  cabocha.h  chasenio.cc  chasenio.h  chunker.cc  chunker.h  common.h  getopt.h  libcabocha.cc  param.cc  parser.cc  parser.h  re.cc  re.h  regex.c  regex.h  selector.cc  selector.h
cabocha-0.1/tests/: Makefile.am  Makefile.in  chunk.test  pos.test  raw.test  selection.test  test1.sh  test2.sh  test3.sh
cabocha-0.1/training/: Makefile.in
mecab-0.993/swig/: MeCab.i
